update docstring
